fix: grid filter positon on mobile

--- a/web/src/pages/store.module.css
+++ b/web/src/pages/store.module.css
@@ -112,7 +112,7 @@
   flex-direction: column;
   flex-wrap: wrap;
   right: 0;
-  margin: 1.7em 0.745em 0;
+  margin: 1.71em 0.745em 0;
   outline: 2px solid black;
   background-color: white;
   z-index: 10;
@@ -163,15 +163,16 @@
   top: 0;
   bottom: 0; */
 
-  position: fixed;
+  position: absolute;
   display: flex;
   cursor: pointer;
-  right: 75px;
+  margin-right: 0;
+  right: 103%;
   background-color: white;
   outline: 2px solid black;
   height: 20px;
   z-index: 10;
-  padding: 0.155em 0.27em 0.155em 0.2em;
+  padding: 0.155em 0.2em 0.155em 0.2em;
   @media (--media-min-small) {
     display: none;
   }
